TeamMonitor: layout cleanup.

Fixes #7560.